Test opdracht links

--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="nl">
 <head>
     <meta charset="UTF-8">
-    <title>Yeep</title>
+    <title>Webdevelepment 1</title>
 </head>
 <body>
 
     <img src="https://www.vives.be/themes/custom/vives/logo.svg" alt="Home">
     <h1>Webdevelepment 1</h1>
-    <h1>YEEP</h1>
+    <a href="/Labo%202/Opdracht%201.html">Opdracht 1</a>
+    <a href="/Labo%202/Opdracht%202.html">Opdracht 2</a>
 
 </body>
 </html>
