--- a/Labo 2/Opdracht 3.html
+++ b/Labo 2/Opdracht 3.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-
+    <p>Dit is een paragraaf</p>
+    <a href="https://www.vives.be">Dite is een hyperlink naar vives</a>
+    <p>U kunt het document openen in Windows Verkenner en de browser ziet het pad van het document, en u kunt het lokaal openen in webstorm</p>
     <a href="/index.html">Home</a>
 </body>
 </html>
