--- a/Labo 2/Opdracht 10.html
+++ b/Labo 2/Opdracht 10.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-    <h1>Dit is HTML5</h1>
     <a href="/index.html">Home</a>
 </body>
 </html>
