--- a/index.html
+++ b/index.html
@@ -10,28 +10,28 @@
     <h1>Webdevelepment 1</h1>
     <ul>
         <li>
-            <a href="/Labo%202/Opdracht%203.html">Opdracht 3</a>
+            <a href="Labo 2/Opdracht 3.html">Opdracht 3</a>
         </li>
         <li>
-            <a href="/Labo%202/Opdracht%204.html">Opdracht 4</a>
+            <a href="Labo 2/Opdracht 4.html">Opdracht 4</a>
         </li>
         <li>
-            <a href="/Labo%202/Opdracht%205.html">Opdracht 5</a>
+            <a href="Labo 2/Opdracht 5.html">Opdracht 5</a>
         </li>
         <li>
-            <a href="/Labo%202/Opdracht%206.html">Opdracht 6</a>
+            <a href="Labo 2/Opdracht 6.html">Opdracht 6</a>
         </li>
         <li>
-            <a href="/Labo%202/Opdracht%207.html">Opdracht 7</a>
+            <a href="Labo 2/Opdracht 7.html">Opdracht 7</a>
         </li>
         <li>
-            <a href="/Labo%202/Opdracht%208.html">Opdracht 8</a>
+            <a href="Labo 2/Opdracht 8.html">Opdracht 8</a>
         </li>
         <li>
-            <a href="/Labo%202/Opdracht%209.html">Opdracht 9</a>
+            <a href="Labo 2/Opdracht 9.html">Opdracht 9</a>
         </li>
         <li>
-            <a href="/Labo%202/Opdracht%2010.html">Opdracht 10</a>
+            <a href="Labo 2/Opdracht 10.html">Opdracht 10</a>
         </li>
     </ul>
 </body>
