--- a/Labo 2/Opdracht 4.html
+++ b/Labo 2/Opdracht 4.html
@@ -5,6 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-    <a href="/index.html">Home</a>
+    <a href="/webdevelepment/index.html">Home</a>
 </body>
 </html>
