--- a/index.html
+++ b/index.html
@@ -10,28 +10,28 @@
     <h1>Webdevelepment 1</h1>
     <ul>
         <li>
-            <a href="/Labo_2/Opdracht3.html">Opdracht 3</a>
+            <a href="Labo_2/Opdracht3.html">Opdracht 3</a>
         </li>
         <li>
-            <a href="/Labo_2/Opdracht4.html">Opdracht 4</a>
+            <a href="Labo_2/Opdracht4.html">Opdracht 4</a>
         </li>
         <li>
-            <a href="/Labo_2/Opdracht5.html">Opdracht 5</a>
+            <a href="Labo_2/Opdracht5.html">Opdracht 5</a>
         </li>
         <li>
-            <a href="/Labo_2/Opdracht6.html">Opdracht 6</a>
+            <a href="Labo_2/Opdracht6.html">Opdracht 6</a>
         </li>
         <li>
-            <a href="/Labo_2/Opdracht7.html">Opdracht 7</a>
+            <a href="Labo_2/Opdracht7.html">Opdracht 7</a>
         </li>
         <li>
-            <a href="/Labo_2/Opdracht8.html">Opdracht 8</a>
+            <a href="Labo_2/Opdracht8.html">Opdracht 8</a>
         </li>
         <li>
-            <a href="/Labo_2/Opdracht9.html">Opdracht 9</a>
+            <a href="Labo_2/Opdracht9.html">Opdracht 9</a>
         </li>
         <li>
-            <a href="/Labo_2/Opdracht10.html">Opdracht 10</a>
+            <a href="Labo_2/Opdracht10.html">Opdracht 10</a>
         </li>
     </ul>
 </body>
