--- a/Labo_2/Opdracht6.html
+++ b/Labo_2/Opdracht6.html
@@ -2,9 +2,17 @@
 <html lang="nl">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Opdracht 6</title>
 </head>
 <body>
+    <p>
+        (4x2 + 2( <br>
+        (4x2( +2 <br>
+        (4x(2+2) <br>
+        (4x(2+2() <br>
+        Deze zijn verkeert genest omdat de positie van de haakjes verkeerd staan het correcte is dit (4x(2+2))
+    </p>
+
     <a href="/webdevelepment/index.html">Home</a>
 </body>
 </html>
