--- a/Labo_2/Opdracht7.html
+++ b/Labo_2/Opdracht7.html
@@ -2,9 +2,27 @@
 <html lang="nl">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Opdracht 7</title>
 </head>
 <body>
+    <ol>
+        <li>
+            <p>({}[]) - Correct genest. De beugels zijn op de juiste manier gekoppeld en in elkaar genest.</p>
+        </li>
+        <li>
+            <p>{{{()] - Onjuist genest. De sluitende accolades } komen niet overeen met de openende vierkante haak [, en er is een extra openende accolade { die niet gesloten is.</p>
+        </li>
+        <li>
+            <p>({()}) - Correct genest. De beugels zijn op de juiste manier gekoppeld en in elkaar genest.</p>
+        </li>
+        <li>
+            <p>(){[}] - Onjuist genest. Het sluitende vierkante haakje ] komt niet overeen met het openingshaakje (, en er is een extra accolade } die geen corresponderend openingsaccolade heeft.</p>
+        </li>
+        <li>
+            <p>{{([]) - Onjuist genest. Het sluitende accolade } komt niet overeen met het openende haakje (, en er is een extra accolade { die niet gesloten is.</p>
+        </li>
+    </ol>
+
     <a href="/webdevelepment/index.html">Home</a>
 </body>
 </html>
