--- a/Labo_2/Opdracht8.html
+++ b/Labo_2/Opdracht8.html
@@ -2,9 +2,27 @@
 <html lang="nl">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Opdracht 8</title>
 </head>
 <body>
+    <span>hier komt een</span>
+    <a href="">link</a>
+    <span>te staan</span>
+    <p>Spatie is niet nodig voor het woord "te"</p>
+
+    <!--<span>hier komt <strong>een</span><a href="">link</a></strong><span> te staan</span>-->
+    <p>&lt;span&gt;hier komt &lt;strong&gt;een&lt;/span&gt;&lt;a href=""&gt;link&lt;/a&gt;&lt;/strong&gt;&lt;span&gt; te staan&lt;/span&gt;
+        is onjuist omdat de &lt;strong&gt; en &lt;a&gt; elementen niet correct zijn genest binnen het &lt;span&gt; element.
+    </p>
+
+    <p>dit is de juiste code:
+        &lt;span&gt;hier komt &lt;strong&gt; een &lt;/strong&gt;&lt;a href=""&gt;&lt;strong&gt; link &lt;/strong&gt;&lt;/a&gt; te staan&lt;/span&gt;
+        <br>
+        <span>hier komt <strong> een </strong><a href=""><strong> link </strong></a> te staan</span>
+    </p>
+
+    <br>
+
     <a href="/webdevelepment/index.html">Home</a>
 </body>
 </html>
