--- a/Labo_2/Opdracht3.html
+++ b/Labo_2/Opdracht3.html
@@ -2,12 +2,15 @@
 <html lang="nl">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Opdracht 3</title>
 </head>
 <body>
     <p>Dit is een paragraaf</p>
+
     <a href="https://www.vives.be">Dite is een hyperlink naar vives</a>
-    <p>U kunt het document openen in Windows Verkenner en de browser ziet het pad van het document, en u kunt het lokaal openen in webstorm</p>
+
+    <p>U kunt met file:// protocol het document openen in Windows Verkenner en in de browser url ziet het pad van het document, en met  http:// protocol wordt het bestand geopend lokaal in webstorm</p>
+
     <a href="/webdevelepment/index.html">Home</a>
 </body>
 </html>
