--- a/Labo_2/Opdracht4.html
+++ b/Labo_2/Opdracht4.html
@@ -2,9 +2,15 @@
 <html lang="nl">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Opdracht 4</title>
 </head>
 <body>
+    <p>Dit              is               een                paragraaf             met             extra                     spaties
+    en
+    met
+    lege
+    tekens,<br> nieuwe regel en &nbsp; &nbsp; &nbsp; &nbsp; extra spaties</p>
+
     <a href="/webdevelepment/index.html">Home</a>
 </body>
 </html>
