--- a/Labo_2/Opdracht5.html
+++ b/Labo_2/Opdracht5.html
@@ -2,9 +2,15 @@
 <html lang="nl">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Opdracht 5</title>
 </head>
 <body>
+    <p>
+        <i>
+            Gebruik &amp;nbsp; en &lt;br /&gt; echter niet voor layout doeleinden, daarvoor gebruiken we immers CSS!
+        </i>
+    </p>
+
     <a href="/webdevelepment/index.html">Home</a>
 </body>
 </html>
