--- a/Labo_2/Opdracht10.html
+++ b/Labo_2/Opdracht10.html
@@ -17,7 +17,7 @@
     &lt;li&gt;vier&lt;/li&gt; <br>
     &lt;/ul&gt;
 </p>
-    <p>dit is verkeerd omdat in deze code een geordende lijst hebt genest, Als je een geneste lijst wilt maken met "jan", "piet" en "joris" genummerd in de sublijst, moet je de geordende lijst nesten in een lijstitem van de buitenste ongeordende lijst, zoals dit:</p>
+    <p>dit is verkeerd omdat in deze code een geordende lijst in een ongeordende lijst verkeerd is genest, Als je een geordende lijst wilt maken met "jan", "piet" en "joris" in een ongeordende lijst moet je de geordende lijst nesten in een lijstitem van een ongeordende lijst, zoals dit:</p>
 <p>
     &lt;ul&gt; <br>
     &lt;li&gt;een&lt;/li&gt; <br>
@@ -46,7 +46,7 @@
     <li>vier</li>
 </ul>
 
-<p>of alles in een ongeordende lijst, zoals dit:</p>
+<p>Of beter alles in 1 lijst bijvoorbeeld een ongeordende lijst, zoals dit:</p>
 
 <ul>
     <li>een</li>
