Labo 3 opdrachten 1,2,3 en persoonlijke pagina

--- a/Labo_2/Opdracht3.html
+++ b/Labo_2/Opdracht3.html
@@ -5,7 +5,7 @@
     <title>Opdracht 3</title>
 </head>
 <body>
-    <p>Dit is een paragraaf</p>
+    <p>Dit is een paragraaf</p>;
 
     <a href="https://www.vives.be">Dite is een hyperlink naar vives</a>
 
