--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
     <img src="https://www.vives.be/themes/custom/vives/logo.svg" alt="Home">
     <h1>Webdevelepment 1</h1>
+
+    <h1>Labo 2</h1>
+
     <ul>
         <li>
             <a href="Labo_2/Opdracht3.html">Opdracht 3</a>
@@ -34,5 +37,20 @@
             <a href="Labo_2/Opdracht10.html">Opdracht 10</a>
         </li>
     </ul>
+
+    <h1>Labo 3</h1>
+
+    <ul>
+        <li>
+            <a href="Labo_3/Opdracht1_Opdracht2_Opdracht3.html">Opdracht 1/Opdracht 2/Opdracht 3</a>
+        </li>
+        <li>
+            <a href="Labo_3/Personal_homepage_assignment/index.html">Personal homepage assignment</a>
+        </li>
+        <li>
+
+        </li>
+    </ul>
+
 </body>
 </html>
