footer toegevoegd om terug naar home pagina te gaan

--- a/Labo_3/Personal_homepage_assignment/index.html
+++ b/Labo_3/Personal_homepage_assignment/index.html
@@ -7,7 +7,9 @@
 <body>
 <!--Ik heb deze opdracht gemaakt met een random persoon via https://www.fakenamegenerator.com/gen-male-nl-bg.php-->
     <main>
+        <!--Naam-->
         <h1>Rieuwert</h1>
+        <!--sectie persoonlijke info-->
         <section class="persoonlijke-info">
             <table>
                 <tr>
@@ -26,6 +28,7 @@
             </table>
         </section>
 
+        <!--sectie met de hobbies van het persoon-->
         <section class="hobbies">
             <h2>Hobbies</h2>
             <ol>
@@ -44,6 +47,7 @@
             </ol>
         </section>
 
+        <!--sectie met de likes/favorite muziek/films-->
         <section class="likes">
             <h2>Likes</h2>
             <table>
@@ -89,5 +93,9 @@
             </table>
         </section>
     </main>
+<!--om terug te gaan naar de thuis pagina-->
+<footer>
+    <a href="/webdevelepment/index.html">terug naar home pagina</a>
+</footer>
 </body>
 </html>
