--- a/Labo_3/Personal_homepage_assignment/index.html
+++ b/Labo_3/Personal_homepage_assignment/index.html
@@ -95,7 +95,7 @@
     </main>
 <!--om terug te gaan naar de thuis pagina-->
 <footer>
-    <a href="/webdevelepment/index.html">terug naar home pagina</a>
+    <a href="/index.html">terug naar home pagina</a>
 </footer>
 </body>
 </html>
