Opdracht Contact Information added

--- a/Labo_3/Personal_homepage_assignment/index.html
+++ b/Labo_3/Personal_homepage_assignment/index.html
@@ -58,7 +58,7 @@
                         </ul>
                     </td>
                     <td>
-                        <img src="files/Spotify-Logo.png" alt="Spotify" width="100">
+                        <img src="files/Spotify-Logo.png" alt="Spotify">
                     </td>
                     <td>
                         <a href="https://open.spotify.com/">Spotify</a>
@@ -71,7 +71,7 @@
                         </ul>
                     </td>
                     <td>
-                        <img src="files/The-great-wall.jpg" alt="The great wall movie" width="100">
+                        <img src="files/The-great-wall.jpg" alt="The great wall movie">
                     </td>
                     <td>
                         <a href="https://www.imdb.com/title/tt2034800/">The Great Wall</a>
@@ -84,7 +84,7 @@
                         </ul>
                     </td>
                     <td>
-                        <img src="files/Avengers-Endgame.jpeg" alt="Avengers Endgame" width="100">
+                        <img src="files/Avengers-Endgame.jpg" alt="Avengers Endgame">
                     </td>
                     <td>
                         <a href="https://www.imdb.com/title/tt4154796/">Avengers Endgame</a>
