--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <a href="Labo_3/Personal_homepage_assignment/index.html">Personal homepage assignment</a>
         </li>
         <li>
-
+            <a href="Labo_3/Contact-Information-Assignment/index.html">Contact information assignment</a>
         </li>
     </ul>
 
