paragraf added too th

--- a/Labo_3/Contact-Information-Assignment/index.html
+++ b/Labo_3/Contact-Information-Assignment/index.html
@@ -18,13 +18,13 @@
     <table>
         <thead>
         <tr>
-            <th>Campus</th>
-            <th>Address</th>
-            <th>Study Areas</th>
-            <th>Phone Number</th>
-            <th>Fax</th>
-            <th>Email</th>
-            <th>Website</th>
+            <th><p>Campus</p></th>
+            <th><p>Address</p></th>
+            <th><p>Study Areas</p></th>
+            <th><p>Phone Number</p></th>
+            <th><p>Fax</p></th>
+            <th><p>Email</p></th>
+            <th><p>Website</p></th>
         </tr>
         </thead>
         <tbody>
