Opdracht onderwijs aanbod vives

--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
         <li>
             <a href="Labo_3/Contact-Information-Assignment/index.html">Contact information assignment</a>
         </li>
+        <li>
+            <a href=""></a>
+        </li>
     </ul>
 
 </body>
