--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <a href="Labo_3/Contact-Information-Assignment/index.html">Contact information assignment</a>
         </li>
         <li>
-            <a href=""></a>
+            <a href="Labo_3/Onderwijs-aanbod/index.html">Onderwijs aanbod</a>
         </li>
     </ul>
 
