--- a/index.html
+++ b/index.html
@@ -2,58 +2,74 @@
 <html lang="nl">
 <head>
     <meta charset="UTF-8">
-    <title>Webdevelepment 1</title>
+    <title>Web Development 1</title>
 </head>
 <body>
+<header>
+    <h1>Web Development 1</h1>
+</header>
 
+<main>
+    <section class="labo2">
+        <h2>Labo 2</h2>
+        <nav>
+            <ul>
+                <li>
+                    <a href="Labo_2/Opdracht3.html">Opdracht 3</a>
+                </li>
+                <li>
+                    <a href="Labo_2/Opdracht4.html">Opdracht 4</a>
+                </li>
+                <li>
+                    <a href="Labo_2/Opdracht5.html">Opdracht 5</a>
+                </li>
+                <li>
+                    <a href="Labo_2/Opdracht6.html">Opdracht 6</a>
+                </li>
+                <li>
+                    <a href="Labo_2/Opdracht7.html">Opdracht 7</a>
+                </li>
+                <li>
+                    <a href="Labo_2/Opdracht8.html">Opdracht 8</a>
+                </li>
+                <li>
+                    <a href="Labo_2/Opdracht9.html">Opdracht 9</a>
+                </li>
+                <li>
+                    <a href="Labo_2/Opdracht10.html">Opdracht 10</a>
+                </li>
+            </ul>
+        </nav>
+    </section>
+
+    <section class="labo3">
+        <h2>Labo 3</h2>
+        <nav>
+            <ul>
+                <li>
+                    <a href="Labo_3/Opdracht1_Opdracht2_Opdracht3.html">Opdracht 1/Opdracht 2/Opdracht 3</a>
+                </li>
+                <li>
+                    <a href="Labo_3/Personal_homepage_assignment/index.html">Personal homepage assignment</a>
+                </li>
+                <li>
+                    <a href="Labo_3/Contact-Information-Assignment/index.html">Contact information assignment</a>
+                </li>
+                <li>
+                    <a href="Labo_3/Onderwijs-aanbod/index.html">Onderwijs aanbod</a>
+                </li>
+                <li>
+                    <a href="Labo_3/Uitbreiding-personal-homepage/index.html">Uitbreiding personal homepage</a>
+                </li>
+            </ul>
+        </nav>
+    </section>
+</main>
+
+<footer>
+    <p>&copy; 2023 Bradley Sander</p>
     <img src="https://www.vives.be/themes/custom/vives/logo.svg" alt="Home">
-    <h1>Webdevelepment 1</h1>
-
-    <h1>Labo 2</h1>
-
-    <ul>
-        <li>
-            <a href="Labo_2/Opdracht3.html">Opdracht 3</a>
-        </li>
-        <li>
-            <a href="Labo_2/Opdracht4.html">Opdracht 4</a>
-        </li>
-        <li>
-            <a href="Labo_2/Opdracht5.html">Opdracht 5</a>
-        </li>
-        <li>
-            <a href="Labo_2/Opdracht6.html">Opdracht 6</a>
-        </li>
-        <li>
-            <a href="Labo_2/Opdracht7.html">Opdracht 7</a>
-        </li>
-        <li>
-            <a href="Labo_2/Opdracht8.html">Opdracht 8</a>
-        </li>
-        <li>
-            <a href="Labo_2/Opdracht9.html">Opdracht 9</a>
-        </li>
-        <li>
-            <a href="Labo_2/Opdracht10.html">Opdracht 10</a>
-        </li>
-    </ul>
-
-    <h1>Labo 3</h1>
-
-    <ul>
-        <li>
-            <a href="Labo_3/Opdracht1_Opdracht2_Opdracht3.html">Opdracht 1/Opdracht 2/Opdracht 3</a>
-        </li>
-        <li>
-            <a href="Labo_3/Personal_homepage_assignment/index.html">Personal homepage assignment</a>
-        </li>
-        <li>
-            <a href="Labo_3/Contact-Information-Assignment/index.html">Contact information assignment</a>
-        </li>
-        <li>
-            <a href="Labo_3/Onderwijs-aanbod/index.html">Onderwijs aanbod</a>
-        </li>
-    </ul>
+</footer>
 
 </body>
 </html>
