--- a/Labo_3/Contact-Information-Assignment/index.html
+++ b/Labo_3/Contact-Information-Assignment/index.html
@@ -80,7 +80,7 @@
     </table>
 </section>
 <footer>
-    <a href="/webdevelopment/index.html">Back to Home Page</a>
+    <a href="/webdevelepment/index.html">back to home page</a>
 </footer>
 </body>
 </html>
