--- a/Labo_3/Contact-Information-Assignment/index.html
+++ b/Labo_3/Contact-Information-Assignment/index.html
@@ -18,13 +18,13 @@
     <table>
         <thead>
         <tr>
-            <th><p>Campus</p></th>
-            <th><p>Address</p></th>
-            <th><p>Study Areas</p></th>
-            <th><p>Phone Number</p></th>
-            <th><p>Fax</p></th>
-            <th><p>Email</p></th>
-            <th><p>Website</p></th>
+            <th><h3>Campus</h3></th>
+            <th><h3>Address</h3></th>
+            <th><h3>Study Areas</h3></th>
+            <th><h3>Phone Number</h3></th>
+            <th><h3>Fax</h3></th>
+            <th><h3>Email</h3></th>
+            <th><h3>Website</h3></th>
         </tr>
         </thead>
         <tbody>
