--- a/index.html
+++ b/index.html
@@ -64,6 +64,29 @@
             </ul>
         </nav>
     </section>
+    <h2>Labo 4</h2>
+    <nav>
+        <ul>
+            <li>
+                <a href="Labo_4/index.html">Opdracht 1/Opdracht 2</a>
+            </li>
+            <li>
+
+            </li>
+            <li>
+
+            </li>
+            <li>
+
+            </li>
+            <li>
+
+            </li>
+        </ul>
+    </nav>
+    <section>
+
+    </section>
 </main>
 
 <footer>
