--- a/Labo_3/Onderwijs-aanbod/index.html
+++ b/Labo_3/Onderwijs-aanbod/index.html
@@ -10,7 +10,7 @@
 </header>
 
 <section>
-    <p>De Hogeschool VIVES is actief in zes studiegebieden:</p>
+    <h4>De Hogeschool VIVES is actief in zes studiegebieden:</h4>
     <ul>
         <li>Biotechniek</li>
         <li>Gezondheidszorg</li>
@@ -22,8 +22,8 @@
 </section>
 
 <section>
-    <p>Aan het studiegebied Handelswetenschappen en bedrijfskunde kan je volgende professionele bachelor diploma’s
-        behalen:</p>
+    <h4>Aan het studiegebied Handelswetenschappen en bedrijfskunde kan je volgende professionele bachelor diploma’s
+        behalen:</h4>
     <ul>
         <li>Toegepaste informatica
             <ol>
@@ -64,7 +64,7 @@
 </section>
 
 <section>
-    <p>Definitie van Ohm</p>
+    <h4>Definitie van Ohm</h4>
     <p>De Ohm is een afgeleide SI-eenheid. Ze is afgeleid van Ampère en Watt. Ze wordt genoteerd met de Griekse
         hoofdletter Omega (Ω). Door een onderdeel met een weerstand van 1 Ohm zal bij een spanning van 1 Volt een stroom
         van 1 Ampère vloeien.</p>
