--- a/Labo_4/index.html
+++ b/Labo_4/index.html
@@ -2,29 +2,79 @@
 <html lang="nl">
 <head>
     <meta charset="UTF-8">
-    <title>Opdracht 1 en Opdracht 2</title>
+    <title>persoonlijke startpagina</title>
 </head>
 <body>
-    <main>
-        <section class="opdracht 1">
-            <p>Lossy compressie verwijdert gegevens om bestandsgrootte te verminderen met enig kwaliteitsverlies. Lossless compressie verkleint bestanden zonder kwaliteitsverlies.</p>
-            <p>JPEG gebruikt lossy compressie. <br>
-                PNG gebruikt lossless compressie. <br>
-                GIF kan zowel lossless als lossy compressie gebruiken dit is afhankelijk van de instellingen bij het maken van het GIF-bestand.</p>
-            <p>Herhaaldelijk bewerken en opslaan in een lossy formaat, zoals JPEG, leidt tot kwaliteitsverlies, wat resulteert in verlies van details, zichtbare artefacten en kleurveranderingen bij elke bewerking. Gebruik originele, niet-lossy bestanden voor bewerkingen en sla pas op in een lossy formaat als de definitieve versie gereed is.</p>
-        </section>
+<main>
+    <!-- Persoonlijke informatie -->
+    <section class="persoonlijke-info">
+        <h1>Rieuwert</h1>
+            <tr>
+                <td>
+                    <ul>
+                        <li><strong>Volledige naam:</strong> Rieuwert Tjeerdsma</li>
+                        <li><strong>Adres:</strong> Luchthavenlaan, 199, 2400, Mol</li>
+                        <li><strong>Telefoonnummer:</strong> 0481 71 14 50</li>
+                        <li><strong>Email Adres:</strong> <a href="mailto:RieuwertTjeerdsma@jourrapide.com">RieuwertTjeerdsma@jourrapide.com</a>
+                        </li>
+                    </ul>
+                </td>
+                <td>
+                    <img src="images/Male-example.png" alt="Profile Foto">
+                </td>
+            </tr>
+    </section>
 
-        <section class="opdracht 2">
-            <img src="images/afbeelding1.jpeg">
-            <p>je kan hier zien dat als we de kwaliteit veranderd (dit voorbeeld 40) dat het bestand grootte veel verminderd van 1.4mb naar 363kb(75% kleiner) maar, <br>
-                zoals je kunt zien verlies je veel sherpte van de afbeelding en ziet alles er meer wazig uit dus is dit geen goed idee als je de details nog steeds will behouden.</p>
-            <img src="images/afbeelding2.jpeg">
-            <p>hier kan je zien zelf door de kwaliteit te verminderen dat de text nog steeds zeer leesbaar is dus hier zou je mogen de kwaliteit verminderen.</p>
-        </section>
-    </main>
+    <section class="links">
+        <h4>Will je meer weten? gebruik dan deze links:</h4>
+        <ul>
+            <li>
+                <a href="hobby's.html">Hobbies</a>
+            </li>
+            <li>
+                <a href="likes.html">Vindt ik leuks</a>
+            </li>
+        </ul>
+    </section>
 
-    <footer>
-        <a href="/webdevelepment/index.html">terug naar home pagina</a>
-    </footer>
+    <!-- Prognose table -->
+    <section class="prognose">
+        <h2>Prognose</h2>
+        <table border="1">
+            <tr>
+                <td>Opleiding</td>
+                <td>Mijn score</td>
+                <td>medestudent 1</td>
+                <td>medestudent 2</td>
+                <td>medestudent 3</td>
+            </tr>
+            <tr>
+                <td>Web develepment</td>
+                <td>71&percnt;</td>
+                <td>56&percnt;</td>
+                <td>89&percnt;</td>
+                <td>53&percnt;</td>
+            </tr>
+            <tr>
+                <td>Fundamentals of programming 1</td>
+                <td>83&percnt;</td>
+                <td>76&percnt;</td>
+                <td>58&percnt;</td>
+                <td>80&percnt;</td>
+            </tr>
+            <tr>
+                <td>System management</td>
+                <td>76&percnt;</td>
+                <td>49&percnt;</td>
+                <td>63&percnt;</td>
+                <td>92&percnt;</td>
+            </tr>
+        </table>
+    </section>
+</main>
+
+<footer>
+    <a href="/webdevelepment/index.html">terug naar home pagina</a>
+</footer>
 </body>
 </html>
