--- a/index.html
+++ b/index.html
@@ -68,19 +68,10 @@
     <nav>
         <ul>
             <li>
-                <a href="Labo_4/index.html">Opdracht 1/Opdracht 2</a>
+                <a href="Labo_4/opdracht1-2.html">Opdracht 1/Opdracht 2</a>
             </li>
             <li>
-
-            </li>
-            <li>
-
-            </li>
-            <li>
-
-            </li>
-            <li>
-
+                <a href="Labo_4/index.html">Opdracht 5</a>
             </li>
         </ul>
     </nav>
