--- a/Labo_3/Onderwijs-aanbod/index.html
+++ b/Labo_3/Onderwijs-aanbod/index.html
@@ -64,10 +64,12 @@
 </section>
 
 <section>
-    <h4>Definitie van Ohm</h4>
-    <p>De Ohm is een afgeleide SI-eenheid. Ze is afgeleid van Ampère en Watt. Ze wordt genoteerd met de Griekse
-        hoofdletter Omega (Ω). Door een onderdeel met een weerstand van 1 Ohm zal bij een spanning van 1 Volt een stroom
-        van 1 Ampère vloeien.</p>
+    <dl>
+        <dt><h4>Definitie van Ohm</h4></dt>
+        <dd><p>De Ohm is een afgeleide SI-eenheid. Ze is afgeleid van Ampère en Watt. Ze wordt genoteerd met de Griekse
+            hoofdletter Omega (Ω). Door een onderdeel met een weerstand van 1 Ohm zal bij een spanning van 1 Volt een stroom
+            van 1 Ampère vloeien.</p></dd>
+    </dl>
 </section>
 
 <footer>
