--- a/Labo_4/likes.html
+++ b/Labo_4/likes.html
@@ -8,46 +8,24 @@
 <main>
     <!-- Likes -->
     <section class="likes">
-        <h2>Vindt ik leuks</h2>
-        <tr>
-            <td>
-                <ul>
-                    <li><p>Muziek met genre bighroom, hardstyle, techno,...</p></li>
-                </ul>
-            </td>
-            <td>
+        <h2>Vind ik leuks</h2>
+        <ol>
+            <li>
+                <p>Muziek met genre bighroom, hardstyle, techno,...</p>
                 <img src="images/Spotify-Logo.png" alt="Spotify">
-            </td>
-            <td>
                 <a href="https://open.spotify.com/">Spotify</a>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <ul>
-                    <li><p>The Great Wall</p></li>
-                </ul>
-            </td>
-            <td>
-                <img src="images/The-great-wall.jpg" alt="The great wall movie">
-            </td>
-            <td>
+            </li>
+            <li>
+                <p>The Great Wall</p>
+                <img src="images/The-great-wall.jpg" alt="The Great Wall movie">
                 <a href="https://www.imdb.com/title/tt2034800/">The Great Wall</a>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <ul>
-                    <li><p>Avengers Endgame</p></li>
-                </ul>
-            </td>
-            <td>
+            </li>
+            <li>
+                <p>Avengers Endgame</p>
                 <img src="images/Avengers-Endgame.jpg" alt="Avengers Endgame">
-            </td>
-            <td>
                 <a href="https://www.imdb.com/title/tt4154796/">Avengers Endgame</a>
-            </td>
-        </tr>
+            </li>
+        </ol>
     </section>
 </main>
 
