--- a/Labo_4/opdracht1-2.html
+++ b/Labo_4/opdracht1-2.html
@@ -15,10 +15,10 @@
         </section>
 
         <section class="opdracht 2">
-            <img src="images/afbeelding1.jpeg">
-            <p>je kan hier zien dat als we de kwaliteit veranderd (dit voorbeeld 40) dat het bestand grootte veel verminderd van 1.4mb naar 363kb(75% kleiner) maar, <br>
+            <img src="images/afbeelding1.jpeg" alt="Afbeelding boss">
+            <p>je kan hier zien dat als we de kwaliteit verandereren (dit voorbeeld 40) dat het bestand grootte veel verminderd van 1.4mb naar 363kb(75% kleiner) maar, <br>
                 zoals je kunt zien verlies je veel sherpte van de afbeelding en ziet alles er meer wazig uit dus is dit geen goed idee als je de details nog steeds will behouden.</p>
-            <img src="images/afbeelding2.jpeg">
+            <img src="images/afbeelding2.jpeg" alt="Afbeelding code">
             <p>hier kan je zien zelf door de kwaliteit te verminderen dat de text nog steeds zeer leesbaar is dus hier zou je mogen de kwaliteit verminderen.</p>
         </section>
     </main>
