--- a/Labo_3/Contact-Information-Assignment/index.html
+++ b/Labo_3/Contact-Information-Assignment/index.html
@@ -18,13 +18,13 @@
     <table>
         <thead>
         <tr>
-            <th><h3>Campus</h3></th>
-            <th><h3>Address</h3></th>
-            <th><h3>Study Areas</h3></th>
-            <th><h3>Phone Number</h3></th>
-            <th><h3>Fax</h3></th>
-            <th><h3>Email</h3></th>
-            <th><h3>Website</h3></th>
+            <th>Campus</th>
+            <th>Address</th>
+            <th>Study Areas</th>
+            <th>Phone Number</th>
+            <th>Fax</th>
+            <th>Email/th>
+            <th>Website</th>
         </tr>
         </thead>
         <tbody>
