--- a/Labo_4/opdracht1-2.html
+++ b/Labo_4/opdracht1-2.html
@@ -7,6 +7,7 @@
 <body>
     <main>
         <section class="opdracht 1">
+            <h4>Opdracht 1</h4>
             <p>Lossy compressie verwijdert gegevens om bestandsgrootte te verminderen met enig kwaliteitsverlies. Lossless compressie verkleint bestanden zonder kwaliteitsverlies.</p>
             <p>JPEG gebruikt lossy compressie. <br>
                 PNG gebruikt lossless compressie. <br>
@@ -15,6 +16,7 @@
         </section>
 
         <section class="opdracht 2">
+            <h4>Opdracht 2</h4>
             <img src="images/afbeelding1.jpeg" alt="Afbeelding boss">
             <p>je kan hier zien dat als we de kwaliteit verandereren (dit voorbeeld 40) dat het bestand grootte veel verminderd van 1.4mb naar 363kb(75% kleiner) maar, <br>
                 zoals je kunt zien verlies je veel sherpte van de afbeelding en ziet alles er meer wazig uit dus is dit geen goed idee als je de details nog steeds will behouden.</p>
