--- a/Labo_3/Onderwijs-aanbod/index.html
+++ b/Labo_3/Onderwijs-aanbod/index.html
@@ -64,8 +64,9 @@
 </section>
 
 <section>
-    <h4>Definitie van Ohm (Ω)</h4>
+    <h4>(Ω)</h4>
     <dl>
+        <dt>Defenitie van ohm</dt>
         <dd><p>De Ohm is een afgeleide SI-eenheid. Ze is afgeleid van Ampère en Watt. Ze wordt genoteerd met de Griekse
             hoofdletter Omega (Ω). Door een onderdeel met een weerstand van 1 Ohm zal bij een spanning van 1 Volt een stroom
             van 1 Ampère vloeien.</p></dd>
