--- a/index.html
+++ b/index.html
@@ -79,6 +79,21 @@
     </section>
 </main>
 
+<h2>Labo 5</h2>
+<section>
+    <nav>
+        <ul>
+            <li>
+                <a href="Labo_5/Opdracht1-Opdracht2-Opdracht3-Opdracht4-Opdracht5-Opdracht7.html">Opdracht1-Opdracht2-Opdracht3-Opdracht4-Opdracht5-Opdracht7</a>
+            </li>
+            <li>
+                <a href="Labo_5/Opdracht_6/index.html">Opdracht 6</a>
+            </li>
+        </ul>
+    </nav>
+</section>
+</main>
+
 <footer>
     <p>&copy; 2023 Bradley Sander</p>
     <img src="https://www.vives.be/themes/custom/vives/logo.svg" alt="Home">
