--- a/Labo_5/Opdracht_6/index.html
+++ b/Labo_5/Opdracht_6/index.html
@@ -6,19 +6,20 @@
     <link rel="stylesheet" type="text/css" href="Style/style.css">
 </head>
 <body>
+
 <header>
     <h1>Opdracht 6</h1>
 </header>
 
 <main>
     <section class="opdracht6">
-        <h1 class="arial">Dit is H1</h1>
+        <h1>Dit is H1</h1>
         <p class="rood">Dit is een rode paragraaf.</p>
 
-        <h2 class="arial">Dit is H2</h2>
+        <h2>Dit is H2</h2>
         <p class="groen">Dit is een groene paragraaf.</p>
 
-        <h3 class="arial">Dit is H3</h3>
+        <h3>Dit is H3</h3>
         <p class="blauw">Dit is een blauwe paragraaf.</p>
     </section>
 </main>
