--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </nav>
     </section>
     <h2>Labo 4</h2>
-    <section>
+    <section class="labo4">
         <nav>
             <ul>
                 <li>
@@ -77,10 +77,10 @@
             </ul>
         </nav>
     </section>
-</main>
+
 
 <h2>Labo 5</h2>
-<section>
+<section class="labo5">
     <nav>
         <ul>
             <li>
