--- a/index.html
+++ b/index.html
@@ -94,6 +94,30 @@
         </ul>
     </nav>
 </section>
+
+    <section class="labo6">
+        <h2>Labo 5</h2>
+        <nav>
+            <ul>
+                <li>
+                    <a href="Labo_6/Opdracht_1/index.html">Opdracht 1</a>
+                </li>
+                <li>
+                    <a href="Labo_6/Opdracht_3/index.html">Opdracht 3</a>
+                </li>
+                <li>
+                    <a href="Labo_6/Opdracht_4/index.html">Opdracht 4</a>
+                </li>
+                <li>
+                    <a href="Labo_6/Opdracht_5/index.html">Opdracht 5</a>
+                </li>
+                <li>
+                    <a href="Labo_6/Opdracht_6/index.html">Opdracht 6</a>
+                </li>
+            </ul>
+        </nav>
+    </section>
+
 </main>
 
 <footer>
