--- a/Labo_6/Opdracht_1/index.html
+++ b/Labo_6/Opdracht_1/index.html
@@ -15,7 +15,7 @@
     <ul>
         <li><a href="...">products</a></li>
         <li><a href="...">distributors</a></li>
-        <li><a href="...">contact</a></</li>
+        <li><a href="...">contact</a></li>
     </ul>
 </main>
 
