--- a/Labo_6/Opdracht_4/index.html
+++ b/Labo_6/Opdracht_4/index.html
@@ -22,6 +22,7 @@
     <a href="https://assets.nick.com/uri/mgid:arc:imageassetref:nickelodeon.nl:3e53bb91-02d5-4817-b671-0c8e8d219f9b?quality=0.7&gen=ntrn&legacyStatusCode=true">Hyper Link</a>
 
     <section>
+        <h4>paragraphs</h4>
         <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ut ligula quis arcu ultrices vestibulum vitae ut lectus.
         </p>
