--- a/index.html
+++ b/index.html
@@ -118,6 +118,17 @@
         </nav>
     </section>
 
+    <section class="labo7">
+        <h2>Labo 5</h2>
+        <nav>
+            <ul>
+                <li>
+                    <a href="Labo_7/Nature_Blog/index.html">Opdracht 1</a>
+                </li>
+            </ul>
+        </nav>
+    </section>
+
 </main>
 
 <footer>
