--- a/index.html
+++ b/index.html
@@ -125,6 +125,9 @@
                 <li>
                     <a href="Labo_7/Nature_Blog/index.html">Opdracht 1</a>
                 </li>
+                <li>
+                    <a href="Labo_7/Personal_Homepage/index.html">Personal homepage</a>
+                </li>
             </ul>
         </nav>
     </section>
