--- a/Labo_7/Personal_Homepage/index.html
+++ b/Labo_7/Personal_Homepage/index.html
@@ -23,21 +23,24 @@
     <!-- Hobbies -->
     <section class="hobbies">
         <h1>Hobbies</h1>
-        <ol>
-            <li>
-                <p>Gamen: Ik game veel meestal op playstation met spellen zoals Destiny 2.</p>
-                <p><a href="https://www.bungie.net/7/en/Destiny">Destiny 2</a></p>
-            </li>
-            <li>
-                <p>Computer: Werk graag met de computer en vindt het tof om in elkaar te steken</p>
-                <p><a href="https://www.portaventuraworld.com/en">Computer samenstellen</a></p>
-            </li>
-            <li>
-                <p>Reizen/Pretparken: Ik ga graag op reis voorall om pretparken te doen in andere landen mijn favoriet
-                    PortAventura World Spanje</p>
-                <p><a href="https://www.portaventuraworld.com/en">PortAventura World</a></p>
-            </li>
-        </ol>
+        <div class="container">
+            <ol>
+                <li>
+                    <p>Gamen: Ik game veel meestal op playstation met spellen zoals Destiny 2.</p>
+                    <a href="https://www.bungie.net/7/en/Destiny">Destiny 2</a>
+                </li>
+                <li>
+                    <p>Computer: Werk graag met de computer en vindt het tof om in elkaar te steken</p>
+                    <a href="https://www.portaventuraworld.com/en">Computer samenstellen</a>
+                </li>
+                <li>
+                    <p>Reizen/Pretparken: Ik ga graag op reis voorall om pretparken te doen in andere landen mijn
+                        favoriet
+                        PortAventura World Spanje</p>
+                    <a href="https://www.portaventuraworld.com/en">PortAventura World</a>
+                </li>
+            </ol>
+        </div>
     </section>
 
     <!-- Likes -->
@@ -95,6 +98,66 @@
                 <td>92&percnt;</td>
             </tr>
         </table>
+    </section>
+    <!--Vrienden-->
+    <section class="Vrienden">
+        <h1>Vrienden</h1>
+        <div class="center">
+            <table>
+                <thead>
+                <tr>
+                    <th>Voornaam</th>
+                    <th>Familienaam</th>
+                    <th>leeftijd</th>
+                    <th>postcode</th>
+                    <th>stad</th>
+                    <th>email</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td>Errol</td>
+                    <td>Schalkwijk</td>
+                    <td>19</td>
+                    <td>8700</td>
+                    <td>Kanegem</td>
+                    <td><a href="mailto:ErrolSchalkwijk@dayrep.com">ErrolSchalkwijk@dayrep.com</a></td>
+                </tr>
+                <tr class="alt">
+                    <td>Gies</td>
+                    <td>van Weert</td>
+                    <td>18</td>
+                    <td>8300</td>
+                    <td>Knokke</td>
+                    <td><a href="mailto:GiesvanWeert@rhyta.com">GiesvanWeert@rhyta.com</a></td>
+                </tr>
+                <tr>
+                    <td>Leonard</td>
+                    <td>Gruijters</td>
+                    <td>18</td>
+                    <td>8610</td>
+                    <td>Zarren</td>
+                    <td><a href="mailto:LeonardGruijters@dayrep.com">LeonardGruijters@dayrep.com</a></td>
+                </tr>
+                <tr class="alt">
+                    <td>Corné</td>
+                    <td>Stappers</td>
+                    <td>18</td>
+                    <td>8890</td>
+                    <td>Dadizele</td>
+                    <td><a href="mailto:CornéStappers@dayrep.com">CornéStappers@dayrep.com</a></td>
+                </tr>
+                <tr>
+                    <td>Johnathan</td>
+                    <td>Zomerdijk</td>
+                    <td>19</td>
+                    <td>9880</td>
+                    <td>Geluveld</td>
+                    <td><a href="mailto:JohnathanZomerdijk@rhyta.com">JohnathanZomerdijk@rhyta.com</a></td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
     </section>
 </main>
 
