--- a/index.html
+++ b/index.html
@@ -128,6 +128,9 @@
                 <li>
                     <a href="Labo_7/Personal_Homepage/index.html">Personal homepage</a>
                 </li>
+                <li>
+                    <a href="Labo_7/Opdracht_2/index.html">Opdracht 2</a>
+                </li>
             </ul>
         </nav>
     </section>
