--- a/index.html
+++ b/index.html
@@ -80,20 +80,19 @@
     </section>
 
 
-
-<section class="labo5">
-    <h2>Labo 5</h2>
-    <nav>
-        <ul>
-            <li>
-                <a href="Labo_5/Opdracht1-Opdracht2-Opdracht3-Opdracht4-Opdracht5-Opdracht7.html">Opdracht1-Opdracht2-Opdracht3-Opdracht4-Opdracht5-Opdracht7</a>
-            </li>
-            <li>
-                <a href="Labo_5/Opdracht_6/index.html">Opdracht 6</a>
-            </li>
-        </ul>
-    </nav>
-</section>
+    <section class="labo5">
+        <h2>Labo 5</h2>
+        <nav>
+            <ul>
+                <li>
+                    <a href="Labo_5/Opdracht1-Opdracht2-Opdracht3-Opdracht4-Opdracht5-Opdracht7.html">Opdracht1-Opdracht2-Opdracht3-Opdracht4-Opdracht5-Opdracht7</a>
+                </li>
+                <li>
+                    <a href="Labo_5/Opdracht_6/index.html">Opdracht 6</a>
+                </li>
+            </ul>
+        </nav>
+    </section>
 
     <section class="labo6">
         <h2>Labo 6</h2>
@@ -130,6 +129,12 @@
                 </li>
                 <li>
                     <a href="Labo_7/Opdracht_2/index.html">Opdracht 2</a>
+                </li>
+                <li>
+                    <a href="Labo_7/Opdracht_3/index.html">Opdracht 3</a>
+                </li>
+                <li>
+                    <a href="Labo_7/Kalender/index.html">Kalender</a>
                 </li>
             </ul>
         </nav>
