--- a/Labo_7/Opdracht_2/index.html
+++ b/Labo_7/Opdracht_2/index.html
@@ -72,5 +72,9 @@
         prefixes werden gebruikt om experimentele of niet gestandaardiseerde CSS eigenschappen te implementeren voordat ze definitief waren gestandaardiseerd.</h2>
 
 </section>
+
+<footer>
+    <a href="/webdevelepment/index.html">terug naar home pagina</a>
+</footer>
 </body>
 </html>
