--- a/Labo_7/Personal_Homepage/index.html
+++ b/Labo_7/Personal_Homepage/index.html
@@ -49,18 +49,15 @@
         <ol>
             <li>
                 <p>Muziek met genre bighroom, hardstyle, techno,...</p>
-                <img src="images/Spotify-Logo.png" alt="Spotify">
-                <a href="https://open.spotify.com/">Spotify</a>
+                <a class="imagelink" href="https://open.spotify.com/"><img src="images/Spotify-Logo.png" alt="Spotify"></a>
             </li>
             <li>
                 <p>The Great Wall</p>
-                <img src="images/The-great-wall.jpg" alt="The Great Wall movie">
-                <a href="https://www.imdb.com/title/tt2034800/">The Great Wall</a>
+                <a href="https://www.imdb.com/title/tt2034800/"><img src="images/The-great-wall.jpg" alt="The Great Wall movie"></a>
             </li>
             <li>
                 <p>Avengers Endgame</p>
-                <img src="images/Avengers-Endgame.jpg" alt="Avengers Endgame">
-                <a href="https://www.imdb.com/title/tt4154796/">Avengers Endgame</a>
+                <a href="https://www.imdb.com/title/tt4154796/"><img src="images/Avengers-Endgame.jpg" alt="Avengers Endgame"></a>
             </li>
         </ol>
     </section>
@@ -68,14 +65,17 @@
     <!-- Prognose table -->
     <section class="prognose">
         <h1>Prognose</h1>
-        <table border="1">
+        <table>
+            <thead>
             <tr>
-                <td>Opleiding</td>
-                <td>Mijn score</td>
-                <td>medestudent 1</td>
-                <td>medestudent 2</td>
-                <td>medestudent 3</td>
+                <th>Opleiding</th>
+                <th>Mijn score</th>
+                <th>medestudent 1</th>
+                <th>medestudent 2</th>
+                <th>medestudent 3</th>
             </tr>
+            </thead>
+            <tbody>
             <tr>
                 <td>Web develepment</td>
                 <td>71&percnt;</td>
@@ -83,7 +83,7 @@
                 <td>89&percnt;</td>
                 <td>53&percnt;</td>
             </tr>
-            <tr>
+            <tr class="alt">
                 <td>Fundamentals of programming 1</td>
                 <td>83&percnt;</td>
                 <td>76&percnt;</td>
@@ -97,10 +97,11 @@
                 <td>63&percnt;</td>
                 <td>92&percnt;</td>
             </tr>
+            </tbody>
         </table>
     </section>
     <!--Vrienden-->
-    <section class="Vrienden">
+    <section class="vrienden">
         <h1>Vrienden</h1>
         <div class="center">
             <table>
