--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Web Development 1</title>
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
 <header>
@@ -10,8 +11,9 @@
 </header>
 
 <main>
+    <div class="center">
     <section class="labo2">
-        <h2>Labo 2</h2>
+        <h1>Labo 2</h1>
         <nav>
             <ul>
                 <li>
@@ -43,7 +45,7 @@
     </section>
 
     <section class="labo3">
-        <h2>Labo 3</h2>
+        <h1>Labo 3</h1>
         <nav>
             <ul>
                 <li>
@@ -66,7 +68,7 @@
     </section>
 
     <section class="labo4">
-        <h2>Labo 4</h2>
+        <h1>Labo 4</h1>
         <nav>
             <ul>
                 <li>
@@ -81,7 +83,7 @@
 
 
     <section class="labo5">
-        <h2>Labo 5</h2>
+        <h1>Labo 5</h1>
         <nav>
             <ul>
                 <li>
@@ -95,7 +97,7 @@
     </section>
 
     <section class="labo6">
-        <h2>Labo 6</h2>
+        <h1>Labo 6</h1>
         <nav>
             <ul>
                 <li>
@@ -118,7 +120,7 @@
     </section>
 
     <section class="labo7">
-        <h2>Labo 7</h2>
+        <h1>Labo 7</h1>
         <nav>
             <ul>
                 <li>
@@ -139,7 +141,7 @@
             </ul>
         </nav>
     </section>
-
+    </div>
 </main>
 
 <footer>
