--- a/Labo_7/Opdracht_3/index.html
+++ b/Labo_7/Opdracht_3/index.html
@@ -8,7 +8,7 @@
 <body>
 <h1>Vrienden</h1>
 <div class="center">
-    <section class="Vrienden">
+    <section class="vrienden">
         <table>
             <thead>
             <tr>
