--- a/Labo_7/Opdracht_2/index.html
+++ b/Labo_7/Opdracht_2/index.html
@@ -9,6 +9,7 @@
 <h1>Vrienden</h1>
 <div class="center">
     <section class="vrienden">
+        <h2>Tafel vrienden</h2>
         <table>
             <thead>
             <tr>
@@ -66,7 +67,7 @@
     </section>
 </div>
 <section>
-    <h1>Vragen</h1>
+    <h2 class="titel">Vragen</h2>
     <h2>Zijn alle properties die de generator voorziet werkelijk nodig?: neen niet alle properties moet je gebruiken bv ik had een gradient code in mijn css zelf al will/heb ik geen gradient nodig.</h2>
     <h2>De generator gebruikt voor bepaalde properties een browser prefix. Zijn die voor jouw browser (nog steeds) nodig?: Neen omdat moderne browsers over het algemeen een goede ondersteuning bieden voor standaard CSS-eigenschappen. <br>
         prefixes werden gebruikt om experimentele of niet gestandaardiseerde CSS eigenschappen te implementeren voordat ze definitief waren gestandaardiseerd.</h2>
