--- a/Labo_7/Opdracht_3/index.html
+++ b/Labo_7/Opdracht_3/index.html
@@ -9,6 +9,7 @@
 <h1>Vrienden</h1>
 <div class="center">
     <section class="vrienden">
+        <h2>Tafel vrienden</h2>
         <table>
             <thead>
             <tr>
@@ -42,7 +43,7 @@
     </section>
 </div>
 <section>
-    <h1>Vraag</h1>
+    <h2 class="titel">Vraag</h2>
     <h2>De regel <code>.onbekend {background-color:red;}</code> heeft geen effect op een <code>&lt;td&gt;</code> cel met class "onbekend" binnen een <code>&lt;tr&gt;</code> rij met class "alt" vanwege specifieke stijlen die al zijn gedefinieerd voor "alt" rijen. Om dit op te lossen, moet een specifieke regel toegevoegd worden, zoals <code>tr.alt td.onbekend { background-color: red; }</code>, om de rode achtergrondkleur te laten gelden voor cellen met class "onbekend" binnen "alt" rijen.</h2>
 
 </section>
