--- a/Labo_7/Kalender/index.html
+++ b/Labo_7/Kalender/index.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style/style.css">
+    <title>Kalender</title>
 </head>
 <body>
 
 <main>
     <div class="center">
     <section class="kalender">
+        <h2>Kalender</h2>
         <table>
             <thead>
             <tr>
