--- a/index.html
+++ b/index.html
@@ -12,135 +12,146 @@
 
 <main>
     <div class="center">
-    <section class="labo2">
-        <h2>Labo 2</h2>
-        <nav>
-            <ul>
-                <li>
-                    <a href="Labo_2/Opdracht3.html">Opdracht 3</a>
-                </li>
-                <li>
-                    <a href="Labo_2/Opdracht4.html">Opdracht 4</a>
-                </li>
-                <li>
-                    <a href="Labo_2/Opdracht5.html">Opdracht 5</a>
-                </li>
-                <li>
-                    <a href="Labo_2/Opdracht6.html">Opdracht 6</a>
-                </li>
-                <li>
-                    <a href="Labo_2/Opdracht7.html">Opdracht 7</a>
-                </li>
-                <li>
-                    <a href="Labo_2/Opdracht8.html">Opdracht 8</a>
-                </li>
-                <li>
-                    <a href="Labo_2/Opdracht9.html">Opdracht 9</a>
-                </li>
-                <li>
-                    <a href="Labo_2/Opdracht10.html">Opdracht 10</a>
-                </li>
-            </ul>
-        </nav>
-    </section>
+        <section class="labo2">
+            <h2>Labo 2</h2>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="Labo_2/Opdracht3.html">Opdracht 3</a>
+                    </li>
+                    <li>
+                        <a href="Labo_2/Opdracht4.html">Opdracht 4</a>
+                    </li>
+                    <li>
+                        <a href="Labo_2/Opdracht5.html">Opdracht 5</a>
+                    </li>
+                    <li>
+                        <a href="Labo_2/Opdracht6.html">Opdracht 6</a>
+                    </li>
+                    <li>
+                        <a href="Labo_2/Opdracht7.html">Opdracht 7</a>
+                    </li>
+                    <li>
+                        <a href="Labo_2/Opdracht8.html">Opdracht 8</a>
+                    </li>
+                    <li>
+                        <a href="Labo_2/Opdracht9.html">Opdracht 9</a>
+                    </li>
+                    <li>
+                        <a href="Labo_2/Opdracht10.html">Opdracht 10</a>
+                    </li>
+                </ul>
+            </nav>
+        </section>
 
-    <section class="labo3">
-        <h2>Labo 3</h2>
-        <nav>
-            <ul>
-                <li>
-                    <a href="Labo_3/Opdracht1_Opdracht2_Opdracht3.html">Opdracht 1/Opdracht 2/Opdracht 3</a>
-                </li>
-                <li>
-                    <a href="Labo_3/Personal_homepage_assignment/index.html">Personal homepage assignment</a>
-                </li>
-                <li>
-                    <a href="Labo_3/Contact-Information-Assignment/index.html">Contact information assignment</a>
-                </li>
-                <li>
-                    <a href="Labo_3/Onderwijs-aanbod/index.html">Onderwijs aanbod</a>
-                </li>
-                <li>
-                    <a href="Labo_3/Uitbreiding-personal-homepage/index.html">Uitbreiding personal homepage</a>
-                </li>
-            </ul>
-        </nav>
-    </section>
+        <section class="labo3">
+            <h2>Labo 3</h2>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="Labo_3/Opdracht1_Opdracht2_Opdracht3.html">Opdracht 1/Opdracht 2/Opdracht 3</a>
+                    </li>
+                    <li>
+                        <a href="Labo_3/Personal_homepage_assignment/index.html">Personal homepage assignment</a>
+                    </li>
+                    <li>
+                        <a href="Labo_3/Contact-Information-Assignment/index.html">Contact information assignment</a>
+                    </li>
+                    <li>
+                        <a href="Labo_3/Onderwijs-aanbod/index.html">Onderwijs aanbod</a>
+                    </li>
+                    <li>
+                        <a href="Labo_3/Uitbreiding-personal-homepage/index.html">Uitbreiding personal homepage</a>
+                    </li>
+                </ul>
+            </nav>
+        </section>
 
-    <section class="labo4">
-        <h2>Labo 4</h2>
-        <nav>
-            <ul>
-                <li>
-                    <a href="Labo_4/opdracht1-2.html">Opdracht 1/Opdracht 2</a>
-                </li>
-                <li>
-                    <a href="Labo_4/index.html">Opdracht 5</a>
-                </li>
-            </ul>
-        </nav>
-    </section>
+        <section class="labo4">
+            <h2>Labo 4</h2>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="Labo_4/opdracht1-2.html">Opdracht 1/Opdracht 2</a>
+                    </li>
+                    <li>
+                        <a href="Labo_4/index.html">Opdracht 5</a>
+                    </li>
+                </ul>
+            </nav>
+        </section>
 
 
-    <section class="labo5">
-        <h2>Labo 5</h2>
-        <nav>
-            <ul>
-                <li>
-                    <a href="Labo_5/Opdracht1-Opdracht2-Opdracht3-Opdracht4-Opdracht5-Opdracht7.html">Opdracht1-Opdracht2-Opdracht3-Opdracht4-Opdracht5-Opdracht7</a>
-                </li>
-                <li>
-                    <a href="Labo_5/Opdracht_6/index.html">Opdracht 6</a>
-                </li>
-            </ul>
-        </nav>
-    </section>
+        <section class="labo5">
+            <h2>Labo 5</h2>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="Labo_5/Opdracht1-Opdracht2-Opdracht3-Opdracht4-Opdracht5-Opdracht7.html">Opdracht1-Opdracht2-Opdracht3-Opdracht4-Opdracht5-Opdracht7</a>
+                    </li>
+                    <li>
+                        <a href="Labo_5/Opdracht_6/index.html">Opdracht 6</a>
+                    </li>
+                </ul>
+            </nav>
+        </section>
 
-    <section class="labo6">
-        <h2>Labo 6</h2>
-        <nav>
-            <ul>
-                <li>
-                    <a href="Labo_6/Opdracht_1/index.html">Opdracht 1</a>
-                </li>
-                <li>
-                    <a href="Labo_6/Opdracht_3/index.html">Opdracht 3</a>
-                </li>
-                <li>
-                    <a href="Labo_6/Opdracht_4/index.html">Opdracht 4</a>
-                </li>
-                <li>
-                    <a href="Labo_6/Opdracht_5/index.html">Opdracht 5</a>
-                </li>
-                <li>
-                    <a href="Labo_6/Opdracht_6/index.html">Opdracht 6</a>
-                </li>
-            </ul>
-        </nav>
-    </section>
+        <section class="labo6">
+            <h2>Labo 6</h2>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="Labo_6/Opdracht_1/index.html">Opdracht 1</a>
+                    </li>
+                    <li>
+                        <a href="Labo_6/Opdracht_3/index.html">Opdracht 3</a>
+                    </li>
+                    <li>
+                        <a href="Labo_6/Opdracht_4/index.html">Opdracht 4</a>
+                    </li>
+                    <li>
+                        <a href="Labo_6/Opdracht_5/index.html">Opdracht 5</a>
+                    </li>
+                    <li>
+                        <a href="Labo_6/Opdracht_6/index.html">Opdracht 6</a>
+                    </li>
+                </ul>
+            </nav>
+        </section>
 
-    <section class="labo7">
-        <h2>Labo 7</h2>
-        <nav>
-            <ul>
-                <li>
-                    <a href="Labo_7/Nature_Blog/index.html">Opdracht 1</a>
-                </li>
-                <li>
-                    <a href="Labo_7/Personal_Homepage/index.html">Personal homepage</a>
-                </li>
-                <li>
-                    <a href="Labo_7/Opdracht_2/index.html">Opdracht 2</a>
-                </li>
-                <li>
-                    <a href="Labo_7/Opdracht_3/index.html">Opdracht 3</a>
-                </li>
-                <li>
-                    <a href="Labo_7/Kalender/index.html">Kalender</a>
-                </li>
-            </ul>
-        </nav>
-    </section>
+        <section class="labo7">
+            <h2>Labo 7</h2>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="Labo_7/Nature_Blog/index.html">Opdracht 1</a>
+                    </li>
+                    <li>
+                        <a href="Labo_7/Personal_Homepage/index.html">Personal homepage</a>
+                    </li>
+                    <li>
+                        <a href="Labo_7/Opdracht_2/index.html">Opdracht 2</a>
+                    </li>
+                    <li>
+                        <a href="Labo_7/Opdracht_3/index.html">Opdracht 3</a>
+                    </li>
+                    <li>
+                        <a href="Labo_7/Kalender/index.html">Kalender</a>
+                    </li>
+                </ul>
+            </nav>
+        </section>
+
+        <section class="labo8">
+            <h2>Labo 8</h2>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="Labo_8/index.html">Opdracht 1-Opdracht 2-pdracht 3-pdracht 4-pdracht 5</a>
+                    </li>
+                </ul>
+            </nav>
+        </section>
     </div>
 </main>
 
