--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="Labo_8/index.html">Opdracht 1-Opdracht 2-pdracht 3-pdracht 4-pdracht 5</a>
+                        <a href="Labo_8/index.html">Opdracht 1-Opdracht 2-Opdracht 3-Opdracht 4-Opdracht 5</a>
                     </li>
                 </ul>
             </nav>
